update image size and prevent stretching

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,8 +29,9 @@
 }
 
 img {
+  object-fit: cover;
   width: 100vw;
-  height: 30vh;
+  height: 55vh;
   margin-bottom: 2vh;
 }
 
